# enginesound

./: .gitignore  Cargo.toml  LICENSE  README.md  example1.esc  example2.esc  example3.esc  example4.esc  example5.esc  example6.esc  rustfmt.toml
benches/: bench.rs
src/: audio.rs  constants.rs  default.es  deser.rs  exactstreamer.rs  fft.rs  gen.rs  gui.glade  gui.rs  lib.rs  main.rs  recorder.rs  utils.rs
src/support/: mod.rs
win_sdl_libs/: fix_windows_sdl.bat
