[package]
name = "enginesound"
version = "1.3.0"
authors = ["https://github.com/DasEtwas/"]
edition = "2018"
description = """
GUI Application used to generate purely synthetic engine sounds with advanced options in real-time, written in Rust.
It features real-time recording of the engine, a CLI, automatic crossfading to create seamless loops in the CLI, realtime frequency domain display through FFT, and preset saving/loading capabilities.
"""

[dependencies]
# recording #
hound = "3.4.0"
crossbeam = "0.7.3"
chrono = "0.4.10"

# saving presets #
serde = { version = "1.0.90", features = ["derive"] }
ron = "0.5.1"

# misc #
parking_lot = "0.10.0"
anyhow = "1.0.26"

# gui #
glium = "0.23.0"
conrod_core = "0.63.0"
conrod_glium = "0.63.0"
conrod_winit = "0.63.0"

# fft #
num-traits = "0.2.11"
num-complex = "0.2.4"
rustfft = "3.0.1"

# sound #
rand_core = "0.5.1"
rand_xorshift ="0.2.0"
sdl2 = "0.33.0"
simdeez = "1.0.0"
paste = "^0.1.4"

# cli #
clap = "2.33.0"

[profile.release]
debug = true
